2009-03-31	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* Added the Windows Mobile 6.0 Professional SDK (ARMV4I) platform to
	  MSV9 and tested.

2009-03-29	Lanica Dragon (Phillip T. George <me@PhillipGeorge.com>)
	* Made it so MSVC9 could compile Exult (just tested for Pocket PC 2003
	  (ARMV4) and Windows Mobile 5.0 Pocket PC SDK (ARMV4I) Releases

2009-03-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs #2717401, #2717420 and possibly many others not reported yet.

2009-03-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug #2694945.
	* Fixed bug #2716264.
	* Fixed incorrect tag written by ES when setting title/codepage.

2009-03-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed bug #2687078.
	* objs/eggs.cc: Check mapeditor flag first.
	* objs/objs.cc, shapes/shapeinf.cc: Moved barge seat rotation code to the
	  overall rotation function.
	* shapeid.h: Implemented simple cache for shape information, wasting memory
	  for performance.
	* files/U7obj.h: Fixing memory leak.
	* shapes/*.h: Fixed memory leaks.
	* Fixed several warnings, including a mistaken assignment in an if and many
	  missing return values in non-void functions.

2009-03-13	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* General: Unified ready types and paperdolls for BG and SI. BG and SI Ready
	  types are converted on load to Exult's (and back when saving), and the
	  only differences between BG and SI ready types/paperdolls being the shape
	  and paperdoll data. Expecting many bugs...
	  Added optional secondary and tertiary ready spots for shapes, to de-hard-
	  code alternate spots and BG cloaks.
	  Added frame powers for shapes, de-hard-coding swamp boots. Such equipment-
	  granted powers, as well as equipment-granted immunities are now cached.
	  Fixed bug #2682606; moreover, shapes of NPCs that cause earthquakes have
	  been de-hard-coded.
	  Types of barge parts, and barge classes, have been de-hard-coded.